overall grid layout done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
   </head>
 
   <body class="container">
-    <p>hola mundo nexter</p>
+    <div class="sidebar">
+      Sidebar
+    </div>
+
+    <header class="header">
+      Header
+    </header>
+
+    <div class="realtors">
+      Top realtors
+    </div>
+
+    <section class="features">
+      Features
+    </section>
+
+    <div class="story__pictures">
+      Story pictures
+    </div>
+
+    <div class="story__content">
+      Story Content
+    </div>
+
+    <div class="homes">
+      Homes
+    </div>
+
+    <section class="gallery">
+      Gallery
+    </section>
+
+    <footer class="footer">
+      Footer
+    </footer>
+
   </body>
 
   <script src="src/index.js"></script>
