--- a/index.html
+++ b/index.html
@@ -25,7 +25,48 @@
     </div>
 
     <section class="features">
-      Features
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading-4--dark">World's best luxury homes</h4>
+        <p class="feature__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, inventore?</p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-trophy"></use>
+        </svg>
+        <h4 class="heading-4--dark">Only the best properties</h4>
+        <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero modi officia enim et.</p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <h4 class="heading-4--dark">All homes in top locations</h4>
+        <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus nostrum deserunt deleniti, vero cumque atque?</p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-key"></use>
+        </svg>
+        <h4 class="heading-4--dark">Your home in one week</h4>
+        <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sint dignissimos consequuntur neque, mollitia porro! Nobis?</p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-presentation"></use>
+        </svg>
+        <h4 class="heading-4--dark">Top 1% realtors</h4>
+        <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quo iure totam impedit aspernatur illum nam sapiente qui maxime error.</p>
+      </div>
+      <div class="feature">
+        <svg class="feature__icon">
+          <use xlink:href="src/img/sprite.svg#icon-lock"></use>
+        </svg>
+        <h4 class="heading-4--dark">Secure payments on Nexter</h4>
+        <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas.</p>
+      </div>
     </section>
 
     <div class="story__pictures">
