--- a/index.html
+++ b/index.html
@@ -29,52 +29,58 @@
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading-4--dark">World's best luxury homes</h4>
+        <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
         <p class="feature__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, inventore?</p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-trophy"></use>
         </svg>
-        <h4 class="heading-4--dark">Only the best properties</h4>
+        <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
         <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero modi officia enim et.</p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-map-pin"></use>
         </svg>
-        <h4 class="heading-4--dark">All homes in top locations</h4>
+        <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
         <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus nostrum deserunt deleniti, vero cumque atque?</p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-key"></use>
         </svg>
-        <h4 class="heading-4--dark">Your home in one week</h4>
+        <h4 class="heading-4 heading-4--dark">Your home in one week</h4>
         <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sint dignissimos consequuntur neque, mollitia porro! Nobis?</p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-presentation"></use>
         </svg>
-        <h4 class="heading-4--dark">Top 1% realtors</h4>
+        <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
         <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quo iure totam impedit aspernatur illum nam sapiente qui maxime error.</p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
           <use xlink:href="src/img/sprite.svg#icon-lock"></use>
         </svg>
-        <h4 class="heading-4--dark">Secure payments on Nexter</h4>
+        <h4 class="heading-4 heading-4--dark">Secure payments on Nexter</h4>
         <p class="feature__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptas.</p>
       </div>
     </section>
 
     <div class="story__pictures">
-      Story pictures
+      <img src="src/img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+      <img src="src/img/story-2.jpeg" alt="New house" class="story__img--2">
     </div>
 
     <div class="story__content">
-      Story Content
+      <h3 class="heading-3 mb-sm">Happy Customers</h3>
+      <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+      <p class="story__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quos repudiandae nam vero quis. Omnis eligendi hic ducimus expedita error.
+      </p>
+      <button class="btn">Find your own home</button>
     </div>
 
     <div class="homes">
