--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body class="container">
     <div class="sidebar">
-      Sidebar
+      <button class="nav-btn"></button>
     </div>
 
     <header class="header">
